fix issue with points brand logo overlapping navigation

--- a/documentation/app/static/styles/layout.less
+++ b/documentation/app/static/styles/layout.less
@@ -18,6 +18,7 @@ html, body {
   position: absolute;
   left: 0;
   top: 30px;
+  z-index: 10;
 }
 
 #documentation {
@@ -89,8 +90,9 @@ html, body {
   background: url(../images/logo-points-vertical.jpg) no-repeat 0 bottom;
   background-size: 100px auto;
   width: 100px;
-  height: 596px;
+  height: 250px;
   opacity: 0.4;
+  z-index: 1;
 }
 
 @media (max-width: @screen-sm-max) {
